--- a/index.html
+++ b/index.html
@@ -4,8 +4,110 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript apply</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ 
+  <div id="login-area">
+    <h1 class='text-center'>Welcome to My Bank.</h1>
+    <div class="submit-area">
+        <h4>Login</h4>
+        <input type="email" name="" id="" class="form-control" placeholder="Your Email">
+        <input type="password" name="" id="" class="form-control" placeholder="Password">
+        <button id="login" class="btn btn-success">Enter</button>
+    </div>
+  </div>
+  <section id="transaction-area">
+    <h1 class="text-center">Transaction Area</h1>
+    <div class="row">
+      <div class="col-md-4 ">
+        <div class="deposit bg-success text-light">
+          <h4>Deposit</h4>
+        <h2>$<span id="current-deposit"> 0.00</span></h2>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="withdraw bg-danger text-light">
+          <h4>Withdraw</h4>
+           <h2>$ <span id="current-withdraw">0.00</span></h2>
+        </div>
+      </div>
+      <div class="col-md-4">
+       <div class="balance bg-warning text-light">
+        <h4>Balance</h4>
+        <h2>$ <span id="current-balance">10</span></h2>
+       </div>
+      </div>
+    </div>
+<!-- status part end  -->
+    <div class="row">
+      <div class="col-md-6">
+      <div class="submit-area">
+        <h3>Deposit</h3>
+        <input type="text" id="deposit-amount" class="form-control" placeholder="$ amount you want to deposit">
+        <br>
+        <button id="deposit-button" class="btn btn-success">Deposit</button>
+      </div>
+      <!-- diposit button area -->
+      </div>
+      <div class="col-md-6">
+       <div class="submit-area">
+        <h3>Withdraw</h3>
+        <input type="text" id="withdraw-amount" class="form-control" placeholder="$ amount you want to withdraw">
+        <br>
+        <button id="withdraw-button" class="btn btn-success">Withdraw</button>
+       </div>
+      </div>
+    </div>
+  </section>
+
+
+
+  <script>
+        // login button eventhandler
+    const loginBtn = document.getElementById("login") ;
+    loginBtn.addEventListener("click", function(){
+      console.log("amake gutaise")
+      const loginArea = document.getElementById("login-area");
+    loginArea.style.display = "none";
+      const transactionArea = document.getElementById("transaction-area");
+      transactionArea.style.display = "block" ;
+    })
+
+      // deposit button eventhandler
+    const depositBtn = document.getElementById("deposit-button");
+    depositBtn.addEventListener("click", function(){
+      const depositNumber = getInputNumber("deposit-amount");
+    
+       updateSpanText("current-deposit" , depositNumber);
+       updateSpanText("current-balance" , depositNumber);
+     
+       document.getElementById("deposit-amount").value = "" ;
+    })
   
+      function updateSpanText(id, depositNumber){
+      const currentAmount = document.getElementById(id).innerText;
+      const currentAmountNumber = parseFloat(currentAmount);
+      const amountTotal = depositNumber + currentAmountNumber ;
+      document.getElementById(id).innerText = amountTotal ;
+    }
+
+    function getInputNumber(id){
+      const inputAmount = document.getElementById(id).value;
+      const inputNumber = parseFloat(inputAmount);
+      return inputNumber;
+    }
+  //  withdraw button eventhandler
+    const withdrawBtn = document.getElementById("withdraw-button")
+    withdrawBtn.addEventListener("click" , function(){
+     const withdrawNumber =  getInputNumber("withdraw-amount");
+    updateSpanText ("current-withdraw" , withdrawNumber);
+    updateSpanText ("current-balance" , -1* withdrawNumber);
+
+
+      document.getElementById("withdraw-amount").value = "";
+    })
+  </script>
 </body>
 </html>
